# sol-log-parser

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs  parsed_log.rs  raw_log.rs
src/structured_log/: mod.rs  parsed.rs  raw.rs
tests/: mod.rs
