[package]
name = "sol-log-parser"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = """
A quick and dirty solana log parser that turns runtime logs into structured data.
"""
exclude = [".github"]
repository = "https://github.com/redmannequin/sol-log-parser"

[dependencies]
base64 = "0.22"
solana-pubkey = "2.2"
thiserror = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"
